--- a/src/app2/config/config.json
+++ b/src/app2/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": "29051998",
+    "database": "test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
